--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
 }
 .header .header-slider {
   position: absolute;
-  left: -20px;
+  left: -70px;
   z-index: 10;
 }
 .header .header-slider .slider-item img {
@@ -267,6 +267,8 @@ body {
   text-align: center;
   border-radius: 50%;
   margin-right: 5px;
+  position: absolute;
+  left: 20px;
 }
 .our-works .card:hover .overlay {
   opacity: 1;
