--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -51,7 +51,7 @@ body {
   // }
   .header-slider {
     position: absolute;
-    left: -20px;
+    left: -70px;
     // bottom: -150px;
     z-index: 10;
     .slider-item {
@@ -296,6 +296,8 @@ body {
         text-align: center;
         border-radius: 50%;
         margin-right: 5px;
+        position: absolute;
+        left: 20px;
       }
     }
     &:hover {
