--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -29,42 +29,31 @@ body {
 .header-parent {
   // border: 1px solid #000;
   height: 900px;
+  border: 1px solid #000;
   overflow: hidden;
 }
 .header {
-  background-image: url("../images/header.png");
-  background-position: center;
-  background-size: cover;
-  height: 811px;
-  position: relative;
-  // padding-top: 58px;
-  // &::after{
-  //   content: url('../images/header-after.png');
-  //   position: absolute;
-  //   top: 5px;
-  //   height: 626px;
-  //   // width: 100%;
-  //   left: 50%;
-  //   bottom: ;
-  //   transform: translate(-50%, 0);
-  //   z-index: 1;
-  // }
   .header-slider {
-    position: absolute;
-    left: -70px;
-    // bottom: -150px;
-    z-index: 10;
+    background-position: center;
+    background-size: cover;
     .slider-item {
+      padding-top: 100px;
+      height: 900px;
+      direction: rtl;
+      overflow: hidden;
       img {
-        width: auto;
+        width: 750px;
+      }
+      .man-cart{
+        width: 870px;
       }
     }
     .owl-dots {
-      text-align: left;
+      text-align: center;
       position: absolute;
       width: 100%;
       bottom: 173px;
-      left: 7%;
+      // left: 7%;
     }
     .owl-dots button.owl-dot {
       width: 15px;
@@ -96,7 +85,7 @@ body {
     }
   }
   .header-content {
-    padding-top: 58px;
+    padding-top: 48px;
     h6,
     h5,
     ul {
@@ -135,7 +124,7 @@ body {
   height: 626px;
   background-position: center;
   background-size: cover;
-  margin-top: -200px;
+  margin-top: -100px;
   position: relative;
   z-index: 9;
   padding-top: 190px;
@@ -652,17 +641,17 @@ body {
     padding-bottom: 200px;
     height: auto;
     .header-slider {
-      left: -500px;
+      // left: -500px;
       // display: none;
     }
   }
   .header .header-slider .owl-dots {
-    text-align: left;
+    text-align: center;
     position: absolute;
     width: 100%;
     bottom: 173px;
-    left: 1%;
-}
+    // left: 1%;
+  }
   .feature {
     .fet-img {
       text-align: right;
@@ -677,8 +666,8 @@ body {
   .header-parent {
     height: auto;
     .header-img {
-      left: -1200px;
-      top: 0;
+      // left: -1200px;
+      // top: 0;
     }
   }
   .know-the-company {
@@ -697,9 +686,22 @@ body {
   }
   .header {
     .header-slider {
+      height: auto;
+      padding-bottom: 40px;
+      img{
+        width: 100% !important;
+        margin: auto !important;
+      }
       // left: -500px;
-      display: none;
+      // display: none;
     }
+  }
+  .header .header-slider .owl-dots {
+    text-align: center;
+    // position: absolute;
+    width: 100%;
+    bottom: 0;
+    // left: 1%;
   }
 }
 
