--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,18 +25,18 @@ body {
   overflow: hidden;
 }
 
-.header .header-slider {
+.header {
   background-position: center;
   background-size: cover;
-}
-.header .header-slider .slider-item {
-  padding-top: 100px;
-  height: 900px;
+  height: 800px;
   direction: rtl;
   overflow: hidden;
 }
+.header .header-slider {
+  padding-top: 100px;
+}
 .header .header-slider .slider-item img {
-  width: 750px;
+  width: 100%;
 }
 .header .header-slider .slider-item .man-cart {
   width: 870px;
@@ -45,7 +45,7 @@ body {
   text-align: center;
   position: absolute;
   width: 100%;
-  bottom: 173px;
+  bottom: -25px;
 }
 .header .header-slider .owl-dots button.owl-dot {
   width: 15px;
@@ -109,7 +109,7 @@ body {
   height: 626px;
   background-position: center;
   background-size: cover;
-  margin-top: -100px;
+  margin-top: -210px;
   position: relative;
   z-index: 9;
   padding-top: 190px;
@@ -223,6 +223,7 @@ body {
 }
 .our-works .card {
   margin-bottom: 20px;
+  height: 400px;
 }
 .our-works .card .card-img {
   background-size: cover;
@@ -271,9 +272,6 @@ body {
   position: absolute;
   left: 20px;
 }
-.our-works .card:hover .overlay {
-  opacity: 1;
-}
 .our-works .btn-more {
   margin-top: 30px;
   text-align: center;
@@ -293,6 +291,30 @@ body {
   background-color: transparent;
   border: 1px solid #fff;
   color: #fff;
+}
+.our-works .card-1:hover .card-img {
+  background-image: url("../images/سمو-الفاكهة.png") !important;
+}
+.our-works .card-2:hover .card-img {
+  background-image: url("../images/ديرتي.png") !important;
+}
+.our-works .card-3:hover .card-img {
+  background-image: url("../images/سوم.png") !important;
+}
+.our-works .card-4:hover .card-img {
+  background-image: url("../images/اشرب.png") !important;
+}
+.our-works .card-5:hover .card-img {
+  background-image: url("../images/الحافظ.png") !important;
+}
+.our-works .card-6:hover .card-img {
+  background-image: url("../images/ليمونة.png") !important;
+}
+.our-works .card-7:hover .card-img {
+  background-image: url("../images/العلي.png") !important;
+}
+.our-works .card-8:hover .card-img {
+  background-image: url("../images/مزايا2.png") !important;
 }
 
 .our-service .serv-header {
