--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -33,16 +33,17 @@ body {
   overflow: hidden;
 }
 .header {
+  background-position: center;
+  background-size: cover;
+  // padding-top: 100px;
+  height: 800px;
+  direction: rtl;
+  overflow: hidden;
   .header-slider {
-    background-position: center;
-    background-size: cover;
+    padding-top: 100px;
     .slider-item {
-      padding-top: 100px;
-      height: 900px;
-      direction: rtl;
-      overflow: hidden;
       img {
-        width: 750px;
+        width: 100%;
       }
       .man-cart{
         width: 870px;
@@ -52,7 +53,7 @@ body {
       text-align: center;
       position: absolute;
       width: 100%;
-      bottom: 173px;
+      bottom: -25px;
       // left: 7%;
     }
     .owl-dots button.owl-dot {
@@ -124,7 +125,7 @@ body {
   height: 626px;
   background-position: center;
   background-size: cover;
-  margin-top: -100px;
+  margin-top: -210px;
   position: relative;
   z-index: 9;
   padding-top: 190px;
@@ -242,6 +243,7 @@ body {
   margin-top: -200px;
   .card {
     margin-bottom: 20px;
+    height: 400px;
     .card-img {
       background-size: cover;
       background-position: center;
@@ -289,11 +291,11 @@ body {
         left: 20px;
       }
     }
-    &:hover {
-      .overlay {
-        opacity: 1;
-      }
-    }
+    // &:hover {
+    //   .overlay {
+    //     opacity: 1;
+    //   }
+    // }
   }
   .btn-more {
     margin-top: 30px;
@@ -313,6 +315,55 @@ body {
         border: 1px solid #fff;
         color: #fff;
       }
+    }
+  }
+
+  .card-1:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/سمو-الفاكهة.png') !important;
+    }
+  }
+  .card-2:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/ديرتي.png') !important;
+    }
+  }
+  .card-3:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/سوم.png') !important;
+    }
+  }
+  .card-4:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/اشرب.png') !important;
+    }
+  }
+  .card-5:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/الحافظ.png') !important;
+    }
+  }
+  .card-6:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/ليمونة.png') !important;
+    }
+  }
+  .card-7:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/العلي.png') !important;
+    }
+  }
+  .card-8:hover{
+    // border: 1px solid #000;
+    .card-img{
+      background-image: url('../images/مزايا2.png') !important;
     }
   }
 }
