--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -29,7 +29,7 @@ body {
 .header-parent {
   // border: 1px solid #000;
   height: 900px;
-  border: 1px solid #000;
+  // border: 1px solid #000;
   overflow: hidden;
 }
 .header {
