--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -121,7 +121,7 @@ body {
 }
 
 .know-the-company {
-  background-image: url("../images/header-after.png");
+  background-image: url("../images/header-after.webp");
   height: 626px;
   background-position: center;
   background-size: cover;
@@ -150,7 +150,7 @@ body {
   position: relative;
   z-index: 10;
   &::after {
-    content: url("../images/sesag.png");
+    content: url("../images/sesag.webp");
     height: 15px;
     position: absolute;
     left: 50%;
@@ -217,7 +217,7 @@ body {
 }
 
 .works {
-  background-image: url("../images/works.png");
+  background-image: url("../images/works.webp");
   background-position: center;
   background-size: cover;
   height: 626px;
